--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
     color: #FF6262;
 }
 
+.section-3-button-more:hover+.svg-section-3,
+.section-1-button-more:hover+.svg-section-1 {
+    color: #102937;
+}
+
 .button-contact:hover {
     animation: jumpeffect 0.7s ease-in-out both;
     background: #FF6262;
@@ -36,7 +41,8 @@
     background-color: #fff;
 }
 
-.outside-button-contact::after {
+.outside-button-contact::after,
+.outside-button-more::after {
     content: '';
     position: absolute;
     width: calc(100% / 2);
@@ -49,6 +55,198 @@
     opacity: 1;
     pointer-events: none;
     transform: translateX(-50%);
+}
+
+.button-more:hover+.svg-contact {
+    color: #102937;
+}
+
+.button-more:hover {
+    animation: jumpeffect 0.7s ease-in-out both;
+    background: #102937;
+    box-shadow: 0px 0px 30px #ffffff33;
+}
+
+.button-more::before {
+    content: '';
+    position: absolute;
+    left: 6px;
+    top: 6px;
+    width: 30px;
+    height: 20px;
+    mask-position: center;
+    mask-image: url('./../public/mask-tl-button.svg');
+    mask-repeat: no-repeat;
+    mask-size: 100% 100%;
+    background-color: #102937;
+}
+
+.button-more::after {
+    content: '';
+    position: absolute;
+    right: 6px;
+    bottom: 6px;
+    width: 30px;
+    height: 20px;
+    mask-position: center;
+    mask-image: url('./../public/mask-br-button.svg');
+    mask-repeat: no-repeat;
+    mask-size: 100% 100%;
+    background-color: #102937;
+}
+
+.section-3-button-more::before {
+    background: white;
+}
+
+.section-3-button-more::after {
+    background: white;
+}
+
+.section-1-button-more::before {
+    background: white;
+}
+
+.section-1-button-more::after {
+    background: white;
+}
+
+.button-more::after:hover,
+.button-more::before:hover {
+    background-color: white;
+}
+
+.section-1 {
+    clip-path: ellipse(135% 100% at 50% 0%);
+}
+
+.section-1-left::before {
+    content: '';
+    position: absolute;
+    left: -13%;
+    top: -11%;
+    width: 350px;
+    height: 350px;
+    mask-image: url(https://wdtsweetheart.wpengine.com/wp-content/uploads/2025/05/pet-foot-icon.svg);
+    mask-size: contain;
+    mask-position: center center;
+    mask-repeat: no-repeat;
+    background-color: #FFFFFF29;
+}
+
+.section-1-image::before {
+    content: '';
+    position: absolute;
+    left: -12%;
+    bottom: 22%;
+    width: 100px;
+    height: 100px;
+    background-color: transparent;
+    background-image: linear-gradient(90deg, #FF9466 10%, #FB4C4C80 100%);
+    border-radius: 50% 50% 50% 50%;
+    box-shadow: 0px 0px 100px 0px rgba(255, 97.99999999999999, 97.99999999999999, 0.5);
+}
+
+.section-1-image::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 25%;
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    background-image: linear-gradient(90deg, #FF9466 10%, #FB4C4C80 100%);
+    border-radius: 50% 50% 50% 50%;
+    box-shadow: 0px 0px 100px 0px rgba(255, 97.99999999999999, 97.99999999999999, 0.5);
+}
+
+@media (max-width: 1540px) {
+    .section-1-left::before {
+        width: 250px;
+        height: 250px;
+        left: -5%;
+        top: -7%;
+    }
+
+    .section-1-image::before {
+        content: '';
+        position: absolute;
+        left: -12%;
+        bottom: 22%;
+        width: 80px;
+        height: 80px;
+    }
+
+    .section-1-image::after {
+        right: -8%;
+        bottom: 28%;
+    }
+}
+
+.section-2-item:hover::before {
+    transform: scaleY(1);
+}
+
+.no-bottom-left-rounded,
+.bottom-rounded,
+.pink-square {
+    transition: all 0.35s ease-in-out;
+}
+
+.section-2-item:hover .no-bottom-left-rounded,
+.section-2-item:hover .bottom-rounded,
+.section-2-item:hover .pink-square {
+    background: #FF6262;
+}
+
+.button-watch-more-section-2:hover::after {
+    transform: rotate(0deg);
+}
+
+.section-2-item:hover .button-watch-more-section-2 {
+    background: #102937;
+}
+
+.button-watch-more-section-2 {
+    transition: all 0.35s ease-in-out;
+}
+
+.button-watch-more-section-2::after {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M1.4,45.6c15.5-5.9,35-4.5,51.5-4.4c3.2,0,6.4,0,9.6,0.1c-4.5-2.6-10.9-5.2-9.8-10.9c0.7-3.9,4.9-5.9,9.2-5.3 c3.8,0.6,8.1,3.6,11.4,5.3c4.2,2.1,8.4,4.2,12.5,6.6c3.2,1.8,6.5,3.5,8.8,6c1.2,0.6,2.5,1.4,3.8,2.6c1.7,1.5,2.4,4.5,0.4,6.1 c-0.7,0.5-1.3,1-1.9,1.4c-1,2.8-3.4,5.1-6.3,7.1C83,65.3,74.9,70,66.7,74.3c-5.9,3-13.4-3.8-8.1-8.4c3-2.6,5.9-5.3,9.1-7.7 c0.9-0.7,2.1-1.7,3.3-2.7c-6.5-0.2-13-0.3-19.6-0.4C35.2,54.5,16.1,55.2,1.1,49C-0.6,48.2-0.2,46.2,1.4,45.6z'/%3E%3C/svg%3E%0A");
+    mask-size: cover;
+    mask-repeat: no-repeat;
+    mask-position: center;
+    transform: rotate(-40deg);
+    transition: all 0.35s ease-in-out;
+    z-index: 1;
+}
+
+.animation-wiggle {
+    animation: wiggle 3s infinite;
+}
+
+.section-3 {
+    clip-path: ellipse(135% 100% at 50% 100%);
+}
+
+.section-3-item::before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    border-radius: 20px;
+    bottom: 6px;
+    right: -10px;
+    z-index: 2;
+    color: #FFF3E2;
+    box-shadow: inset 10px 10px 0px 0px currentColor;
+    transform: rotate(80deg);
 }
 
 @keyframes jumpeffect {
@@ -76,8 +274,14 @@
     }
 }
 
-@keyframes shine {
+@keyframes wiggle {
+
+    0%,
     100% {
-        left: 150%;
+        transform: rotate(-3deg);
+    }
+
+    50% {
+        transform: rotate(3deg);
     }
 }
