--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,11 @@
     box-shadow: 0px 0px 30px #ffffff33;
 }
 
+.section-4-button-more:hover {
+    animation: jumpeffect 0.7s ease-in-out both;
+    box-shadow: 0px 0px 30px #ffffff33;
+}
+
 .button-more::before {
     content: '';
     position: absolute;
@@ -86,6 +91,34 @@
     position: absolute;
     right: 6px;
     bottom: 6px;
+    width: 30px;
+    height: 20px;
+    mask-position: center;
+    mask-image: url('./../public/mask-br-button.svg');
+    mask-repeat: no-repeat;
+    mask-size: 100% 100%;
+    background-color: #102937;
+}
+
+.section-4-button-more::before {
+    content: '';
+    position: absolute;
+    left: 6px;
+    top: 6px;
+    width: 30px;
+    height: 20px;
+    mask-position: center;
+    mask-image: url('./../public/mask-tl-button.svg');
+    mask-repeat: no-repeat;
+    mask-size: 100% 100%;
+    background-color: #102937;
+}
+
+.section-4-button-more::after {
+    content: '';
+    position: absolute;
+    right: 6px;
+    bottom: 9px;
     width: 30px;
     height: 20px;
     mask-position: center;
@@ -247,6 +280,15 @@
     color: #FFF3E2;
     box-shadow: inset 10px 10px 0px 0px currentColor;
     transform: rotate(80deg);
+}
+
+.section-4-sale {
+    mask-image: url(https://wdtsweetheart.wpengine.com/wp-content/uploads/2025/05/offer-mask.svg);
+    mask-size: contain;
+    mask-position: center center;
+    mask-repeat: no-repeat;
+    padding: 25px 35px 25px 35px;
+    line-height: 1;
 }
 
 @keyframes jumpeffect {
