--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&family=Recursive:wght@300..1000&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Recursive:wght@300..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Recursive:wght@300..1000&display=swap');
 @import "tailwindcss";
-
 @config ".././tailwind.config.ts";
 
 html {
@@ -13,11 +11,4 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     font-weight: 400;
-}
-
-h5 {
-    font-family: 'Londrina Solid', display;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 1.2;
 }
