--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-.section-3-button-more:hover+.svg-section-3,
-.section-1-button-more:hover+.svg-section-1 {
-    color: #102937;
-}
-
 .button-text::before {
     content: '';
     position: absolute;
@@ -31,6 +26,7 @@
 
 .outside-button::after {
     content: '';
+    background: #1029371a;
     position: absolute;
     width: calc(100% / 2);
     height: 5px;
@@ -41,90 +37,6 @@
     opacity: 1;
     pointer-events: none;
     transform: translateX(-50%);
-}
-
-.button-more:hover+.svg-contact {
-    color: #102937;
-}
-
-.button-more:hover {
-    animation: jumpeffect 0.7s ease-in-out both;
-    background: #102937;
-    box-shadow: 0px 0px 30px #ffffff33;
-}
-
-.section-4-button-more:hover {
-    animation: jumpeffect 0.7s ease-in-out both;
-    box-shadow: 0px 0px 30px #ffffff33;
-}
-
-.button-more::before {
-    content: '';
-    position: absolute;
-    left: 6px;
-    top: 6px;
-    width: 30px;
-    height: 20px;
-    mask-position: center;
-    mask-image: url('./../public/mask-tl-button.svg');
-    mask-repeat: no-repeat;
-    mask-size: 100% 100%;
-    background-color: #102937;
-}
-
-.button-more::after {
-    content: '';
-    position: absolute;
-    right: 6px;
-    bottom: 6px;
-    width: 30px;
-    height: 20px;
-    mask-position: center;
-    mask-image: url('./../public/mask-br-button.svg');
-    mask-repeat: no-repeat;
-    mask-size: 100% 100%;
-    background-color: #102937;
-}
-
-.section-4-button-more::before {
-    content: '';
-    position: absolute;
-    left: 6px;
-    top: 6px;
-    width: 30px;
-    height: 20px;
-    mask-position: center;
-    mask-image: url('./../public/mask-tl-button.svg');
-    mask-repeat: no-repeat;
-    mask-size: 100% 100%;
-    background-color: #102937;
-}
-
-.section-4-button-more::after {
-    content: '';
-    position: absolute;
-    right: 6px;
-    bottom: 9px;
-    width: 30px;
-    height: 20px;
-    mask-position: center;
-    mask-image: url('./../public/mask-br-button.svg');
-    mask-repeat: no-repeat;
-    mask-size: 100% 100%;
-    background-color: #102937;
-}
-
-.section-3-button-more::before {
-    background: white;
-}
-
-.section-3-button-more::after {
-    background: white;
-}
-
-.button-more::after:hover,
-.button-more::before:hover {
-    background-color: white;
 }
 
 .section-1 {
@@ -261,7 +173,7 @@
     transform: rotate(80deg);
 }
 
-.section-4-sale {
+.sale-off {
     mask-image: url(https://wdtsweetheart.wpengine.com/wp-content/uploads/2025/05/offer-mask.svg);
     mask-size: contain;
     mask-position: center center;
@@ -313,6 +225,19 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.bg-image-section-7::before {
+    background: #102937;
+    border-radius: 30px;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    opacity: 0.53;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 @keyframes jumpeffect {
